# adb_portscan

./: Cargo.toml  README.md  README.zh.md
src/: ctrl_c.rs  detect.rs  error.rs  lib.rs  main.rs  mdns.rs  output.rs  platform.rs  ports.rs  scan.rs  target.rs  threads.rs
tests/: integration.rs
